- Implemented Dmitry's const patch. - Added support for "weekday" as relative item. - Fixed bug #37368 (Incorrect timestamp returned for strtotime()).